--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" sizes="500x500" href="/favicon.png?v=2" />
-  <link rel="apple-touch-icon" href="/favicon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=3" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png?v=3" />
+  <link rel="icon" type="image/png" sizes="500x500" href="/favicon.png?v=3" />
+  <link rel="apple-touch-icon" href="/favicon.png?v=3" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Krish Homestay</title>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
