--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) - Added 2026-02-16 -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CK2RN9Y9YF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
